--- a/.github/workflows/predict.yml
+++ b/.github/workflows/predict.yml
@@ -1,4 +1,3 @@
-# .github/workflows/predict.yml
 name: Predict Race
 
 on:
@@ -6,26 +5,28 @@ on:
     inputs:
       date:
         description: "YYYYMMDD or today"
-        required: true
+        required: false
         default: "today"
       pid:
         description: "01..24"
-        required: true
+        required: false
         default: "04"
       race:
         description: "1R..12R"
-        required: true
+        required: false
         default: "1R"
-  # スケジュール実行（UTC）。JST昼帯なら調整してね
   schedule:
-    - cron: "*/20 22-8 * * *"
+    # UTC: 13:00-23:59 を 20分おき（例）→必要に応じて調整
+    - cron: "*/20 13-23 * * *"
+    # UTC: 00:00-08:59 を 20分おき
+    - cron: "*/20 0-8 * * *"
 
 permissions:
-  contents: write  # commit/push 用
+  contents: write
 
-# 同時実行の取り違え防止（同じキーは最新だけ動かす）
+# inputs が無い schedule 実行でも安全な簡易キーに
 concurrency:
-  group: predict-${{ github.ref }}-${{ inputs.date || 'today' }}-${{ inputs.pid || '04' }}-${{ inputs.race || '1R' }}
+  group: predict-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -43,22 +44,26 @@ jobs:
       - name: Install deps
         run: npm i --no-audit --no-fund
 
-      # 予測本体。既存の scripts/predict.mjs が環境変数 DATE/PID/RACE を読む前提を維持。
-      # さらに “out/prediction.json” へ結果を出すようスクリプト側に対応してある想定。
+      - name: Resolve params
+        id: p
+        run: |
+          DATE="${{ github.event.inputs.date }}"
+          PID="${{ github.event.inputs.pid }}"
+          RACE="${{ github.event.inputs.race }}"
+          echo "date=${DATE:-today}" >> $GITHUB_OUTPUT
+          echo "pid=${PID:-04}"       >> $GITHUB_OUTPUT
+          echo "race=${RACE:-1R}"     >> $GITHUB_OUTPUT
+
       - name: Run predict
         env:
-          DATE: ${{ inputs.date || 'today' }}
-          PID:  ${{ inputs.pid  || '04' }}
-          RACE: ${{ inputs.race || '1R' }}
+          DATE: ${{ steps.p.outputs.date }}
+          PID:  ${{ steps.p.outputs.pid }}
+          RACE: ${{ steps.p.outputs.race }}
         run: |
           mkdir -p out
           node scripts/predict.mjs
-          # もしスクリプトが out/prediction.json を出していない場合に備え、存在チェックだけ入れておく
-          if [ ! -f out/prediction.json ]; then
-            echo '{}' > out/prediction.json
-          fi
+          [ -f out/prediction.json ] || echo '{}' > out/prediction.json
 
-      # 予測結果をアーティファクトで取得できるようにする（GPT/ローカルからダウンロード可）
       - name: Upload artifact (prediction.json)
         uses: actions/upload-artifact@v4
         with:
@@ -67,14 +72,13 @@ jobs:
           if-no-files-found: warn
           retention-days: 7
 
-      # 従来通りの成果物コミット（public 配下などを書き戻す用途）
       - name: Commit & push
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           if ! git diff --cached --quiet; then
-            git commit -m "predict: ${{ inputs.date || 'today' }} ${{ inputs.pid || '04' }} ${{ inputs.race || '1R' }} [skip ci]"
+            git commit -m "predict: ${{ steps.p.outputs.date }} ${{ steps.p.outputs.pid }} ${{ steps.p.outputs.race }} [skip ci]"
             git pull --rebase --autostash || true
             git push
           else
